# Daniel-UR5

./: README.md
home_skill/: home_skill.yaml
home_skill/home_skill_client/: CMakeLists.txt  package.xml  setup.py
home_skill/home_skill_client/src/home_skill_client/: home_skill_client.py
home_skill/home_skill_msgs/: CMakeLists.txt  package.xml
home_skill/home_skill_msgs/action/: HomeSkill.action
home_skill/home_skill_scxml/: home_skill.scxml
home_skill/home_skill_server/: CMakeLists.txt  package.xml
home_skill/home_skill_server/include/home_skill_server/: home_skill_server.h
home_skill/home_skill_server/launch/: run.launch
home_skill/home_skill_server/src/: home_skill_server.cpp  main.cpp
init/: init.yaml
init/init_skill_client/: CMakeLists.txt  package.xml  setup.py
init/init_skill_client/src/init_skill_client/: init_skill_client.py
init/init_skill_msgs/: CMakeLists.txt  package.xml
init/init_skill_msgs/action/: InitSkill.action
init/init_skill_scxml/: init_skill.scxml
init/init_skill_server/: CMakeLists.txt  package.xml
init/init_skill_server/include/init_skill_server/: init_skill_server.h
init/init_skill_server/launch/: run.launch
init/init_skill_server/src/: init_skill_server.cpp  main.cpp  rfinger.cpp  rfinger.hpp
pick_printer/: pick_printer.yaml
pick_printer/pick_printer_skill_client/: CMakeLists.txt  package.xml  setup.py
pick_printer/pick_printer_skill_client/src/pick_printer_skill_client/: pick_printer_skill_client.py
pick_printer/pick_printer_skill_msgs/: CMakeLists.txt  package.xml
pick_printer/pick_printer_skill_msgs/action/: PickPrinterSkill.action
pick_printer/pick_printer_skill_scxml/: pick_printer_skill.scxml
pick_printer/pick_printer_skill_server/: CMakeLists.txt  package.xml
pick_printer/pick_printer_skill_server/include/pick_printer_skill_server/: pick_printer_skill_server.h
pick_printer/pick_printer_skill_server/launch/: run.launch
pick_printer/pick_printer_skill_server/src/: Kinect.cpp  Kinect.hpp  ObjDetection.cpp  ObjDetection.hpp  main.cpp  pick_printer_skill_server.cpp  rfinger.cpp
place_avg/: place_avg.yaml
place_avg/place_avg_skill_client/: CMakeLists.txt  package.xml  setup.py
place_avg/place_avg_skill_msgs/: CMakeLists.txt  package.xml
place_avg/place_avg_skill_msgs/action/: PlaceAvgSkill.action
place_avg/place_avg_skill_scxml/: place_avg_skill.scxml
place_avg/place_avg_skill_server/: CMakeLists.txt  package.xml
place_avg/place_avg_skill_server/include/place_avg_skill_server/: place_avg_skill_server.h
place_avg/place_avg_skill_server/launch/: run.launch
place_avg/place_avg_skill_server/src/: ObjDetection.cpp  ObjDetection.hpp  main.cpp  place_avg_skill_server.cpp  ur5.cpp  ur5.hpp
(+1 files in other folders)
