<?xml version="1.0"?>
<package>
  <name>place_avg_skill_server</name>
  <version>0.0.0</version>
  <description>The place_avg_skill_server package</description>

  <maintainer email="user@todo.todo">user</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>place_avg_skill_msgs</build_depend>
  <build_depend>trac_ik_lib</build_depend>
  <build_depend>apriltags_swatbotics</build_depend>
  <build_depend>robotiq_2f_gripper_control</build_depend>  

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>place_avg_skill_msgs</run_depend>
  <run_depend>trac_ik_lib</run_depend>
  <run_depend>apriltags_swatbotics</run_depend>
  <run_depend>robotiq_2f_gripper_control</run_depend>

</package>
